now working pdf on live

--- a/render.html
+++ b/render.html
@@ -36,15 +36,15 @@
       <table style="border-collapse:collapse;margin-left:5.515pt" cellspacing="0">
          <tr style="height:15pt">
             <td style="width:234pt;border-top-style:solid;border-top-width:1pt;border-left-style:solid;border-left-width:1pt;border-bottom-style:solid;border-bottom-width:1pt;border-right-style:solid;border-right-width:1pt">
-               <p class="s2" style="padding-top: 1pt;padding-left: 8pt;text-indent: 0pt;text-align: left;">Name: Vinay 5</p>
+               <p class="s2" style="padding-top: 1pt;padding-left: 8pt;text-indent: 0pt;text-align: left;">Name: Vinay 2</p>
             </td>
             <td style="width:234pt;border-top-style:solid;border-top-width:1pt;border-left-style:solid;border-left-width:1pt;border-bottom-style:solid;border-bottom-width:1pt;border-right-style:solid;border-right-width:1pt">
-               <p class="s2" style="padding-top: 1pt;padding-left: 7pt;text-indent: 0pt;text-align: left;">Employee ID: RVS030</p>
+               <p class="s2" style="padding-top: 1pt;padding-left: 7pt;text-indent: 0pt;text-align: left;">Employee ID: RVS047</p>
             </td>
          </tr>
          <tr style="height:15pt">
             <td style="width:234pt;border-top-style:solid;border-top-width:1pt;border-left-style:solid;border-left-width:1pt;border-bottom-style:solid;border-bottom-width:1pt;border-right-style:solid;border-right-width:1pt">
-               <p class="s2" style="padding-left: 8pt;text-indent: 0pt;text-align: left;">Joining Date: June 17, 2019</p>
+               <p class="s2" style="padding-left: 8pt;text-indent: 0pt;text-align: left;">Joining Date: February 10, 2020</p>
             </td>
             <td style="width:234pt;border-top-style:solid;border-top-width:1pt;border-left-style:solid;border-left-width:1pt;border-bottom-style:solid;border-bottom-width:1pt;border-right-style:solid;border-right-width:1pt">
                <p class="s2" style="padding-left: 6pt;text-indent: 0pt;text-align: left;">Bank Name: ICICI Bank</p>
@@ -52,18 +52,18 @@
          </tr>
          <tr style="height:15pt">
             <td style="width:234pt;border-top-style:solid;border-top-width:1pt;border-left-style:solid;border-left-width:1pt;border-bottom-style:solid;border-bottom-width:1pt;border-right-style:solid;border-right-width:1pt">
-               <p class="s2" style="padding-left: 8pt;text-indent: 0pt;text-align: left;">Designation: Laravel Developer</p>
+               <p class="s2" style="padding-left: 8pt;text-indent: 0pt;text-align: left;">Designation: Magento Developer</p>
             </td>
             <td style="width:234pt;border-top-style:solid;border-top-width:1pt;border-left-style:solid;border-left-width:1pt;border-bottom-style:solid;border-bottom-width:1pt;border-right-style:solid;border-right-width:1pt">
-               <p class="s2" style="padding-left: 7pt;text-indent: 0pt;text-align: left;">Bank Account No: 5456565656</p>
+               <p class="s2" style="padding-left: 7pt;text-indent: 0pt;text-align: left;">Bank Account No: 7887878787</p>
             </td>
          </tr>
          <tr style="height:15pt">
             <td style="width:234pt;border-top-style:solid;border-top-width:1pt;border-left-style:solid;border-left-width:1pt;border-bottom-style:solid;border-bottom-width:1pt;border-right-style:solid;border-right-width:1pt">
-               <p class="s2" style="padding-left: 8pt;text-indent: 0pt;text-align: left;">Department: Development</p>
+               <p class="s2" style="padding-left: 8pt;text-indent: 0pt;text-align: left;">Department: Ecommerce</p>
             </td>
             <td style="width:234pt;border-top-style:solid;border-top-width:1pt;border-left-style:solid;border-left-width:1pt;border-bottom-style:solid;border-bottom-width:1pt;border-right-style:solid;border-right-width:1pt">
-               <p class="s2" style="padding-left: 7pt;text-indent: 0pt;text-align: left;">IFSC Code: ICICI099677</p>
+               <p class="s2" style="padding-left: 7pt;text-indent: 0pt;text-align: left;">IFSC Code: ICICI099678</p>
             </td>
          </tr>
          <tr style="height:15pt">
@@ -71,7 +71,7 @@
                <p class="s2" style="padding-left: 8pt;text-indent: 0pt;text-align: left;">Location: Mohali</p>
             </td>
             <td style="width:234pt;border-top-style:solid;border-top-width:1pt;border-left-style:solid;border-left-width:1pt;border-bottom-style:solid;border-bottom-width:1pt;border-right-style:solid;border-right-width:1pt">
-               <p class="s2" style="padding-left: 7pt;text-indent: 0pt;text-align: left;">Pan Card No.:EGFD4432</p>
+               <p class="s2" style="padding-left: 7pt;text-indent: 0pt;text-align: left;">Pan Card No.:LKBD4543</p>
             </td>
          </tr>
          <tr style="height:15pt">
@@ -79,7 +79,7 @@
                <p class="s2" style="padding-left: 9pt;text-indent: 0pt;line-height: 11pt;text-align: left;">Effective Work Days: 31</p>
             </td>
             <td style="width:234pt;border-top-style:solid;border-top-width:1pt;border-left-style:solid;border-left-width:1pt;border-bottom-style:solid;border-bottom-width:1pt;border-right-style:solid;border-right-width:1pt">
-               <p class="s2" style="padding-left: 9pt;text-indent: 0pt;line-height: 12pt;text-align: left;">No. of days worked: 30</p>
+               <p class="s2" style="padding-left: 9pt;text-indent: 0pt;line-height: 12pt;text-align: left;">No. of days worked: 31</p>
             </td>
          </tr>
       </table>
@@ -112,7 +112,7 @@
                <p class="s2" style="padding-left: 4pt;text-indent: 0pt;text-align: left;">BASIC</p>
             </td>
             <td style="width:84pt;border-top-style:solid;border-top-width:1pt;border-left-style:solid;border-left-width:1pt;border-bottom-style:solid;border-bottom-width:1pt;border-right-style:solid;border-right-width:1pt">
-               <p class="s2" style="padding-right: 3pt;text-indent: 0pt;line-height: 12pt;text-align: right;">16000.00</p>
+               <p class="s2" style="padding-right: 3pt;text-indent: 0pt;line-height: 12pt;text-align: right;">15500.00</p>
             </td>
             <td style="width:131pt;border-top-style:solid;border-top-width:1pt;border-left-style:solid;border-left-width:1pt;border-bottom-style:solid;border-bottom-width:1pt;border-right-style:solid;border-right-width:1pt">
                <p class="s2" style="padding-left: 4pt;text-indent: 0pt;line-height: 11pt;text-align: left;">PROFESSIONAL TAX</p>
@@ -126,7 +126,7 @@
                <p class="s2" style="padding-left: 4pt;text-indent: 0pt;line-height: 12pt;text-align: left;">DEARNESS ALLOWANCE</p>
             </td>
             <td style="width:84pt;border-top-style:solid;border-top-width:1pt;border-left-style:solid;border-left-width:1pt;border-bottom-style:solid;border-bottom-width:1pt;border-right-style:solid;border-right-width:1pt">
-               <p class="s2" style="padding-right: 3pt;text-indent: 0pt;line-height: 12pt;text-align: right;">2500.00</p>
+               <p class="s2" style="padding-right: 3pt;text-indent: 0pt;line-height: 12pt;text-align: right;">2000.00</p>
             </td>
             <td style="width:131pt;border-top-style:solid;border-top-width:1pt;border-left-style:solid;border-left-width:1pt;border-bottom-style:solid;border-bottom-width:1pt;border-right-style:solid;border-right-width:1pt">
                <p class="s2" style="padding-left: 4pt;text-indent: 0pt;line-height: 12pt;text-align: left;">EPF</p>
@@ -155,13 +155,13 @@
                <p class="s2" style="padding-left: 4pt;text-indent: 0pt;text-align: left;">PERFORMANCE ALLOWANCE</p>
             </td>
             <td style="width:84pt;border-top-style:solid;border-top-width:1pt;border-left-style:solid;border-left-width:1pt;border-bottom-style:solid;border-bottom-width:1pt;border-right-style:solid;border-right-width:1pt">
-               <p class="s2" style="padding-right: 3pt;text-indent: 0pt;line-height: 12pt;text-align: right;">4566.00</p>
+               <p class="s2" style="padding-right: 3pt;text-indent: 0pt;line-height: 12pt;text-align: right;">6654.00</p>
             </td>
             <td style="width:131pt;border-top-style:solid;border-top-width:1pt;border-left-style:solid;border-left-width:1pt;border-bottom-style:solid;border-bottom-width:1pt;border-right-style:solid;border-right-width:1pt">
                <p class="s2" style="padding-left: 4pt;text-indent: 0pt;line-height: 12pt;text-align: left;">INCOME TAX</p>
             </td>
             <td style="width:90pt;border-top-style:solid;border-top-width:1pt;border-left-style:solid;border-left-width:1pt;border-bottom-style:solid;border-bottom-width:1pt;border-right-style:solid;border-right-width:1pt">
-               <p class="s2" style="padding-right: 3pt;text-indent: 0pt;line-height: 12pt;text-align: right;">1500.00</p>
+               <p class="s2" style="padding-right: 3pt;text-indent: 0pt;line-height: 12pt;text-align: right;">0.00</p>
             </td>
          </tr>
          <tr style="height:15pt">
@@ -169,13 +169,13 @@
                <p class="s2" style="padding-left: 4pt;text-indent: 0pt;text-align: left;">CONVEYANCE ALLOWANCE</p>
             </td>
             <td style="width:84pt;border-top-style:solid;border-top-width:1pt;border-left-style:solid;border-left-width:1pt;border-bottom-style:solid;border-bottom-width:1pt;border-right-style:solid;border-right-width:1pt">
-               <p class="s2" style="padding-right: 3pt;text-indent: 0pt;line-height: 12pt;text-align: right;">45777.00</p>
+               <p class="s2" style="padding-right: 3pt;text-indent: 0pt;line-height: 12pt;text-align: right;">7888.00</p>
             </td>
             <td style="width:131pt;border-top-style:solid;border-top-width:1pt;border-left-style:solid;border-left-width:1pt;border-bottom-style:solid;border-bottom-width:1pt;border-right-style:solid;border-right-width:1pt">
                <p class="s2" style="padding-left: 4pt;text-indent: 0pt;line-height: 12pt;text-align: left;">UNPAID LEAVES DEDUCTION</p>
             </td>
             <td style="width:90pt;border-top-style:solid;border-top-width:1pt;border-left-style:solid;border-left-width:1pt;border-bottom-style:solid;border-bottom-width:1pt;border-right-style:solid;border-right-width:1pt">
-               <p class="s2" style="padding-right: 3pt;text-indent: 0pt;line-height: 12pt;text-align: right;">500.00</p>
+               <p class="s2" style="padding-right: 3pt;text-indent: 0pt;line-height: 12pt;text-align: right;">0.00</p>
             </td>
          </tr>
          <tr style="height:15pt">
@@ -183,7 +183,7 @@
                <p class="s2" style="padding-left: 4pt;text-indent: 0pt;line-height: 12pt;text-align: left;">OTHER ALLOWANCE</p>
             </td>
             <td style="width:84pt;border-top-style:solid;border-top-width:1pt;border-left-style:solid;border-left-width:1pt;border-bottom-style:solid;border-bottom-width:1pt;border-right-style:solid;border-right-width:1pt">
-               <p class="s2" style="padding-right: 3pt;text-indent: 0pt;line-height: 12pt;text-align: right;">500.00</p>
+               <p class="s2" style="padding-right: 3pt;text-indent: 0pt;line-height: 12pt;text-align: right;">0.00</p>
             </td>
             <td style="width:131pt;border-top-style:solid;border-top-width:1pt;border-left-style:solid;border-left-width:1pt;border-bottom-style:solid;border-bottom-width:1pt;border-right-style:solid;border-right-width:1pt">
                <p class="s2" style="padding-left: 4pt;text-indent: 0pt;line-height: 12pt;text-align: left;">OTHER DEDUCTIONS</p>
@@ -197,18 +197,18 @@
                <p class="s2" style="padding-left: 4pt;text-indent: 0pt;text-align: left;">Total Earnings: INR.</p>
             </td>
             <td style="width:84pt;border-top-style:solid;border-top-width:1pt;border-left-style:solid;border-left-width:1pt;border-bottom-style:solid;border-bottom-width:1pt;border-right-style:solid;border-right-width:1pt">
-               <p class="s2" style="padding-right: 3pt;text-indent: 0pt;text-align: right;">46000.00</p>
+               <p class="s2" style="padding-right: 3pt;text-indent: 0pt;text-align: right;">35000.00</p>
             </td>
             <td style="width:131pt;border-top-style:solid;border-top-width:1pt;border-left-style:solid;border-left-width:1pt;border-bottom-style:solid;border-bottom-width:1pt;border-right-style:solid;border-right-width:1pt">
                <p class="s2" style="padding-left: 4pt;text-indent: 0pt;text-align: left;">Total Deductions: INR.</p>
             </td>
             <td style="width:90pt;border-top-style:solid;border-top-width:1pt;border-left-style:solid;border-left-width:1pt;border-bottom-style:solid;border-bottom-width:1pt;border-right-style:solid;border-right-width:1pt;">
-               <p class="s2" style="padding-right: 3pt;text-indent: 0pt;text-align: right;">2200.00</p>
+               <p class="s2" style="padding-right: 3pt;text-indent: 0pt;text-align: right;">200.00</p>
             </td>
          </tr>
       </table>
-      <p class="s1" style="padding-top: 4pt;padding-left: 10pt;text-indent: 0pt;text-align: left;">Net Pay For The Month: Rs. 4350/-</p>
-      <p class="s4" style="padding-top: 8pt;padding-left: 10pt;text-indent: 0pt;text-align: left;">fourty three thousand  five hundred rupees only</p>
+      <p class="s1" style="padding-top: 4pt;padding-left: 10pt;text-indent: 0pt;text-align: left;">Net Pay For The Month: Rs. 35000/-</p>
+      <p class="s4" style="padding-top: 8pt;padding-left: 10pt;text-indent: 0pt;text-align: left;">Thirty five thousand rupees only</p>
       <p style="text-indent: 0pt;text-align: left;"><br/></p>
       <p style="padding-left: 198pt;text-indent: 0pt;text-align: left;"><span class="h1" style=" background-color: #FF0;">Casual Leaves Info</span></p>
       <table style="border-collapse:collapse;margin-left:5.515pt" cellspacing="0">
@@ -217,10 +217,10 @@
                <p class="s5" style="padding-left: 4pt;text-indent: 0pt;text-align: left;">CL Opening Balance- 1</p>
             </td>
             <td style="width:99pt;border-top-style:solid;border-top-width:1pt;border-left-style:solid;border-left-width:1pt;border-bottom-style:solid;border-bottom-width:1pt;border-right-style:solid;border-right-width:1pt">
-               <p class="s5" style="padding-left: 4pt;text-indent: 0pt;text-align: left;">CL Used- 1</p>
+               <p class="s5" style="padding-left: 4pt;text-indent: 0pt;text-align: left;">CL Used- 0</p>
             </td>
             <td style="width:117pt;border-top-style:solid;border-top-width:1pt;border-left-style:solid;border-left-width:1pt;border-bottom-style:solid;border-bottom-width:1pt;border-right-style:solid;border-right-width:1pt">
-               <p class="s5" style="padding-left: 4pt;text-indent: 0pt;text-align: left;">CL Balance- 0</p>
+               <p class="s5" style="padding-left: 4pt;text-indent: 0pt;text-align: left;">CL Balance- 1</p>
             </td>
             <td style="width:118pt;border-top-style:solid;border-top-width:1pt;border-left-style:solid;border-left-width:1pt;border-bottom-style:solid;border-bottom-width:1pt;border-right-style:solid;border-right-width:1pt">
                <p class="s5" style="padding-left: 4pt;text-indent: 0pt;text-align: left;">Total Deducted- 0</p>
